Archive2/68/114500d5bb4730/output
main.cpp:20:35: error: unknown escape sequence: '\040'
               <<  "j ="  << j <<  ' \ n ' ;
                                   ^
main.cpp:20:35: warning: multi-character character constant [-Wmultichar]
main.cpp:31:35: error: unknown escape sequence: '\040'
               <<  "j ="  << j <<  ' \ n ' ; 
                                   ^
main.cpp:31:35: warning: multi-character character constant [-Wmultichar]
main.cpp:8:12: error: 'um' was not declared in this scope
 decltype ( um - > x ) x3 ;        // tipo de x3 é dupla (tipo declarado) 
            ^
main.cpp:8:12: error: 'um' was not declared in this scope
main.cpp:8:17: error: expected primary-expression before '>' token
 decltype ( um - > x ) x3 ;        // tipo de x3 é dupla (tipo declarado) 
                 ^
main.cpp:8:19: error: 'x' was not declared in this scope
 decltype ( um - > x ) x3 ;        // tipo de x3 é dupla (tipo declarado) 
                   ^
main.cpp:8:26: error: invalid type in declaration before ';' token
 decltype ( um - > x ) x3 ;        // tipo de x3 é dupla (tipo declarado) 
                          ^
main.cpp:9:20: error: 'x' was not declared in this scope
 decltype ( ( a - > x ) ) x4 = x3 ;   // tipo de x4 é const double & (expressão lvalue)
                    ^
main.cpp:9:18: error: expected primary-expression before '>' token
 decltype ( ( a - > x ) ) x4 = x3 ;   // tipo de x4 é const double & (expressão lvalue)
                  ^
main.cpp:9:20: error: 'x' was not declared in this scope
 decltype ( ( a - > x ) ) x4 = x3 ;   // tipo de x4 é const double & (expressão lvalue)
                    ^
main.cpp:9:29: error: invalid type in declaration before '=' token
 decltype ( ( a - > x ) ) x4 = x3 ;   // tipo de x4 é const double & (expressão lvalue)
                             ^
main.cpp:11:22: error: 'classe' has not been declared
 template  < class T, classe U > 
                      ^
main.cpp:12:17: error: 'U' is not a type
 auto add ( T t, U u )  - > decltype ( t + u ) ;  // tipo de retorno depende de parâmetros do modelo
                 ^
main.cpp:12:24: error: expected initializer before '-' token
 auto add ( T t, U u )  - > decltype ( t + u ) ;  // tipo de retorno depende de parâmetros do modelo
                        ^
main.cpp: In lambda function:
main.cpp:22:37: error: expected '{' before '-' token
     auto f =  [ ] ( int a, int b )  - >  int  { 
                                     ^
main.cpp: At global scope:
main.cpp:22:34: warning: unused parameter 'a' [-Wunused-parameter]
     auto f =  [ ] ( int a, int b )  - >  int  { 
                                  ^
main.cpp:22:34: warning: unused parameter 'b' [-Wunused-parameter]
main.cpp:22:34: warning: unused parameter 'a' [-Wunused-parameter]
main.cpp:22:34: warning: unused parameter 'b' [-Wunused-parameter]
main.cpp: In function 'int principal()':
main.cpp:22:39: error: expected primary-expression before '>' token
     auto f =  [ ] ( int a, int b )  - >  int  { 
                                       ^
main.cpp:23:8: error: 'voltar' was not declared in this scope
        voltar a * b ; 
        ^
main.cpp:22:42: error: expected primary-expression before 'int'
     auto f =  [ ] ( int a, int b )  - >  int  { 
                                          ^
main.cpp:26:23: error: invalid type in declaration before '=' token
     decltype ( f ) f2 = f ;  // do tipo de uma função de lambda é único e sem nome 
                       ^
main.cpp:28:20: error: 'f2' cannot be used as a function
     j = f2 ( 3 , 3 ) ;
                    ^
main.cpp:32:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
